<resources>
    <string name="app_name">Power Hour</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="option_item_title_placeholder">Game Mode Name</string>
    <string name="option_icon_description">Game Mode Icon</string>
    <string name="option_configure_description">Icon for configuring game mode</string>
    <string name="configure_game_title">Placeholder</string>
    <string name="configure_rounds_value_placeholder">000</string>
    <string name="configure_reset_rounds_description">Reset the rounds</string>
    <string name="configure_rounds_text">rounds</string>
    <string name="configure_pauses_text">pauses</string>
    <string name="button_minus_10_desc">subtract ten rounds</string>
    <string name="button_minus_1_desc">subtract one round</string>
    <string name="button_plus_1_desc">add one round</string>
    <string name="button_plus_10_desc">add 10 rounds</string>
    <string name="menu_configure_reset">Reset</string>
    <string name="game_control_buttons_stop_desc">Stop or delete the game</string>
    <string name="game_control_sound_chooser_desc">Shot sound selector</string>
    <string name="game_screen_countdown_text_default">60.0</string>
    <string name="game_screen_round_text">Round</string>
    <string name="game_screen_rounds_remaining_placeholder">150 of 300</string>
    <string name="game_screen_seconds_remaining">seconds</string>
    <string name="game_screen_remaining_pauses_placeholder">3 Pauses Remaining</string>
    <string name="game_control_keep_screen_on_desc">toggle keep screen on state</string>
    <string name="keep_screen_on_warning">The screen will be kept on until you turn it off.  This may cause a lot of battery drain, which you might need later in the night ;).  If you disable the screen lock then the game will continue in the background.</string>
    <string name="screen_on_warning">Screen will not be kept on</string>
    <string name="configure_game_color_background_text">Background</string>
    <string name="configure_game_color_accent_text">Accent</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="source_code">Source Code</string>
    <string name="developer_name">Jordon de Hoog</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="source_code_url">http://github.com/jordond/powerhour</string>
    <string name="developer_url">http://github.com/jordond</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="configure_game_color_reset_text">Reset</string>
    <string name="muted_game">Game is now muted</string>
    <string name="minutes_remaining">minutes remaining</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="you_finished">you finished</string>
    <string name="tour_activity_title">Tour</string>
    <string name="action_help">Help</string>
    <string name="tour_slide_1_title">Welcome to Power Hour</string>
    <string name="tour_slide_1_desc">Here\'s a simple tour to get you ready to drink up!  To start off choose a preset game mode.</string>
    <string name="tour_slide_2_title">Configuring a custom game</string>
    <string name="tour_slide_2_desc">Instead of a preset you can configure your game as you see fit, from the drinking sound to the display color, as well as recording your own alarm sound!</string>
    <string name="tour_slide_3_title">Playing the game</string>
    <string name="tour_slide_3_desc">Once the game has begun, a countdown timer will start.  When the timer reaches zero you drink!  Simple as that.</string>
    <string name="tour_slide_4_title">Shot Time!</string>
    <string name="tour_slide_4_desc">An alarm will sound, and a little animation will notify you that it is time to take a shot.</string>
    <string name="tour_slide_5_title">Finished Game</string>
    <string name="tour_slide_5_desc">After the last round of drinking you will be shown some statistics about your game, although you might be too gone to read ;)</string>
    <string name="tour_slide_6_title">That\'s It!</string>
    <string name="tour_slide_6_desc">Now choose a game mode and get drinking!</string>
    <string name="tour_slide_wear_title">Android Wear Enabled!</string>
    <string name="tour_slide_wear_text">That\'s right! Nobody asked for it, but it\'s here!  If your device is paired to an Android Wear device prepare to be amazed.  No configuration needed, batteries sold separately.</string>
</resources>
