<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="1dp"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/minus_10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_minus_10_desc"
        android:src="@drawable/ic_minus_10" />

    <ImageButton
        android:id="@+id/minus_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_minus_1_desc"
        android:src="@drawable/ic_minus_1" />

    <ImageButton
        android:id="@+id/reset"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/configure_reset_rounds_description"
        android:src="@drawable/ic_restore" />

    <ImageButton
        android:id="@+id/plus_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_plus_1_desc"
        android:src="@drawable/ic_plus_1" />

    <ImageButton
        android:id="@+id/plus_10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_plus_10_desc"
        android:src="@drawable/ic_plus_10" />

</LinearLayout>