<!--suppress AndroidElementNotAllowed -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configure_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:clickable="true"
    tools:context="ca.hoogit.powerhour.Configure.ConfigureGameFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|top"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/configure_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:fontFamily="sans-serif-light"
            android:text="@string/configure_game_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/configure_game_placeholder_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/configure_rounds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/configure_rounds_value_placeholder"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/configure_game_rounds_text_size" />

        </RelativeLayout>

        <ca.hoogit.powerhour.Views.PlusMinusButtons
            android:id="@+id/configure_rounds_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal">

        </ca.hoogit.powerhour.Views.PlusMinusButtons>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/configure_options_margin"
            android:layout_marginStart="@dimen/configure_options_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:text="@string/configure_rounds_text" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/configure_rounds_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_spacing"
                android:background="@color/accent"
                app:max="301"
                app:min="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="@dimen/configure_options_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:text="@string/configure_pauses_text" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/configure_pauses_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_spacing"
                android:layout_weight="2"
                android:background="@color/accent"
                app:max="11"
                app:min="0" />

            <TextView
                android:id="@+id/configure_pauses_value"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/configure_options_margin"
            android:layout_marginStart="@dimen/configure_options_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_spacing"
                android:fontFamily="sans-serif-light"
                android:text="keep the screen on" />

            <com.gc.materialdesign.views.Switch
                android:id="@+id/configure_keep_screen_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                app:check="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="@dimen/configure_options_margin"
            android:layout_marginStart="@dimen/configure_options_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-light"
                android:text="colors" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/configure_color_background"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_game_color_background_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="12sp"
                    android:theme="@style/Widget.AppCompat.Button.Small" />

                <Button
                    android:id="@+id/configure_color_accent"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_game_color_accent_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="12sp"
                    android:theme="@style/Widget.AppCompat.Button.Small" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/configure_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_spacing"
        android:text="START"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:buttonColor="@color/accent"
        app:cornerRadius="5dp"
        app:shadowColor="@color/accentDark"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

</RelativeLayout>